fixed nav and projects gap

--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,6 @@
     height: 100vh;
     text-align: center;
 }
-
+.project-tile {
+    margin-bottom: 30px;
+}
